# CafeAuTex

./: .eslintrc.json  .gitignore  README.md  eslint.config.js  package.json  pnpm-lock.yaml  tailwind.config.ts  tsconfig.json  tsconfig.node.json  vite.config.ts  vitest.config.ts
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  release.yml
docs/: ARCHITECTURE.md  DESIGN_SYSTEM.md  NODE_SCHEMA.md
mcp-server/: bridge.py  main.py  requirements.txt
mcp-server/tools/: assets.py  bibliography.py  document.py  issues.py  namespace.py
public/: index.html
src/: main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src-tauri/src/commands/: compile.rs  dialog.rs  file.rs  mod.rs
src/assets/: AssetPickerModal.tsx  assetStore.ts
src/contexts/: AuthContext.tsx
src/editor/: Editor.tsx  schema.ts  sync.ts
src/editor/nodeViews/: CodeBlockView.tsx  EquationBlockView.tsx  EquationInlineView.tsx  FigureView.tsx  (+1 more)
src/export/: labelRegistry.ts  latexExporter.test.ts  latexExporter.ts  nodeSerializers.ts  packageInference.ts  preambleBuilder.ts
src/guards/: AuthGuard.tsx
src/model/: nodeRegistry.ts  nodes.test.ts  nodes.ts  serialization.ts  validation.ts
src/platform/: index.ts
src/preview/: CompileErrorPanel.tsx  PdfPreview.tsx  useCompiler.ts
src/shell/: AppShell.tsx  StatusBar.tsx  Toolbar.tsx
src/storage/: autosave.ts  db.ts  documentRepository.ts  fileExport.ts  fileImport.ts
src/store/: documentStore.ts
src/tauri/: commands.ts
src/utils/: katex.ts
(+11 files in other folders)
