[package]
name = "cafe-autex"
version = "0.1.0"
description = "Offline-first WYSIWYG LaTeX editor with real-time collaboration and AI completion"
authors = ["Café AuTex contributors"]
license = "AGPL-3.0-only"
repository = "https://github.com/irsotarriva/cafe-autex"
edition = "2021"
rust-version = "1.77"

# See https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "cafe_autex_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "cafe-autex"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2.0", features = [] }

[dependencies]
tauri = { version = "2.3", features = ["tray-icon"] }
tauri-plugin-fs = "2.2"
tauri-plugin-shell = "2.2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
tokio = { version = "1", features = ["full"] }

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]

[profile.release]
panic = "abort"   # Strip expensive panic clean-up logic
codegen-units = 1 # Compile crates one at a time so the compiler can optimize better
opt-level = "s"   # Optimize for binary size
lto = true        # Enable link-time optimization
strip = true      # Automatically strip symbols from the binary
